# Docker-CI-CD

./: README.md
CIJava/: .gitlab-ci.yml
DockerBundledImage/cmake-with-flask/: Dockerfile
DockerComposeAdvanced/: docker-compose.yml
DockerComposeAdvanced/backend/: Dockerfile  base.py  main.py
DockerComposeAdvanced/db/: Dockerfile  init_users.py
DockerComposeAdvanced/frontend/: Dockerfile
GitlabCI/: .gitlab-ci.yml
GitlabCI/task-ci/: CMakeLists.txt
GitlabCI/task-ci/C/: CMakeLists.txt
GitlabCIPython/: .gitlab-ci.yml  README.md
GitlabCIPython/task-testing-python/: setup.py
GitlabCIPython/task-testing-python/tests/test_01/: test_leap.py
TestTask/task0/: README.md
